// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage component should render correctly 1`] = `
<form>
  <div>
    <label
      htmlFor="email"
    >
      Username/Email:
    </label>
    <input
      id="email"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
  <div>
    <label
      htmlFor="password"
    >
      Password:
    </label>
    <input
      id="password"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
  <button
    onClick={[Function]}
    type="submit"
  >
    Login
  </button>
</form>
`;

exports[`LoginPage component wrong password should show error message 1`] = `
<form>
  <div
    className="error"
  />
  <div>
    <label
      htmlFor="email"
    >
      Username/Email:
    </label>
    <input
      id="email"
      onChange={[Function]}
      type="email"
      value="ryto@gmail.com"
    />
  </div>
  <div>
    <label
      htmlFor="password"
    >
      Password:
    </label>
    <input
      id="password"
      onChange={[Function]}
      type="password"
      value="somePassword"
    />
  </div>
  <button
    onClick={[Function]}
    type="submit"
  >
    Login
  </button>
</form>
`;
